# hands_on_kitti

./: CMakeLists.txt  README.md  docker_4_ros1.txt  package.xml
include/my_single_node_pkg/: my_node.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hands_on_kitti/lib/hands_on_kitti/: reader
install/hands_on_kitti/share/ament_index/resource_index/parent_prefix_path/: hands_on_kitti
install/hands_on_kitti/share/hands_on_kitti/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hands_on_kitti/share/hands_on_kitti/launch/: my_node_launch.py
launch/: my_node_launch.py
log/: latest_build
src/: bagReader.cpp  publisher.cpp  subscriber.cpp
src/install/: local_setup.sh  setup.sh
src/old_files/: pct_publisher.cpp  pct_subscriber.cpp  subscriber_old.cpp
