<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hands_on_kitti</name>
  <version>0.0.0</version>
  <description>kitti ros2 bag pubsub using rclcpp</description>
  <maintainer email="jeongmy@uci.edu">jung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_transport</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>  
  </export>
</package>
